update index to redirect

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-
-Dummy index.html
-
+<html>
+<meta http-equiv="refresh" content="0; url=fatcat/index.html">
+<a href="fatcat/index.html">Redirect</a>
+</html>
